<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.netcracker.cloud.security.core.utils</groupId>
    <artifactId>core-utils-aggregator</artifactId>
    <packaging>pom</packaging>
    <version>2.3.1-SNAPSHOT</version>
    <name>core-utils-aggregator</name>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
        <jacoco.plugin.version>0.8.14</jacoco.plugin.version>
    </properties>

    <modules>
        <module>tls</module>
        <module>k8s</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/Netcracker/qubership-core-utils.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-core-utils.git
        </developerConnection>
        <url>https://github.com/Netcracker/qubership-core-utils</url>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <snapshots />
        </repository>
    </repositories>

    <distributionManagement>
            <repository>
                <id>github</id>
                <name>GitHub OWNER Apache Maven Packages</name>
                <url>https://maven.pkg.github.com/netcracker/qubership-core-utils</url>
            </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        @{argLine} <!-- argLine is needed for jacoco-maven-plugin for prepare-agent goal -->
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
